saves/test/demo_full_20240802_193545/dff/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp dff_tb.v dff.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
dff_tb.v:118: $finish called at 580000 (1ps)

iverilog cmd 2 error:

